--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
 <body>
   
-<article>
+<div>
 <p>
 Ana Mercedes Gauna
 <p>
@@ -68,7 +68,7 @@ Tenho muita paciência para analisar dados, analisar problemas técnicos em sofw
 <p>
 Tenho experiência com desenvolvimento web de sites (ou Blog) para profissionais liberais com domínio próprio, configuração do Google AdWords, Google AdSence, Google analytics, Google Webmasters, Google Tags, Facebook, criação de imagem para anúncios web.  
  <p>
-</article>
+</div>
   
   
 <div class="container">
