--- a/index.html
+++ b/index.html
@@ -101,9 +101,11 @@ Eu presto serviços realizando diversos tipos de trabalhos: Consultoria em tecno
 análise de dados presquisando problemas em área tecnica ou área asministrativa com foco em buscar soluções. Montagem de computadores, 
 instalação de aplicativos e equipamentos, instalação de equipamentos wireless (impressora wif, roteador, eifi, televisor Smart-TV wifi, 
  etc, elaboração de imagens para publicidade em redes sociais (facebook / instagram), configuração de publicidade no facebook, 
- integração da configuração do facebook com o instagram, treinamento pessoal, desenvolvimento de sites e blogs para profissionais liberais.
-   
+ integração da configuração do facebook com o instagram, treinamento pessoal, desenvolvimento de sites e blogs para profissionais 
+  liberais.   
 <p>   
+Quer me conhecer melhor?  Visite o meu site, visite meus Blogs, me faça uma visita no Twitter e Instagram.
+  
 </div>  <!--  fim da segunda coluna -->    
    
  <!--  <div class="col-md-2"></div>  terceira coluna -->
