--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <p> </p>
   <p> </p>
   <p>  </p>
-  
+<img src="http://anagauna.eti.br/img/gauna2.jpg" width="150" height="150">  
 CNPJ: 029.052.589/0001-53 <br>
 CRA-RJ: 03-03161 <br>
 Microsoft Partner: 4970237 <br>
