--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
   <p> </p>
   <p> </p>
   <p>  </p>
-<img src="http://anagauna.eti.br/img/gauna2.jpg" width="150" height="150">  
+<img src="http://anagauna.eti.br/img/gauna2.jpg" width="150" height="250">  
+  <p> </p>
 CNPJ: 029.052.589/0001-53 <br>
 CRA-RJ: 03-03161 <br>
 Microsoft Partner: 4970237 <br>
-<p>
+  <p> </p>
 * Senior Business Systems Analyst <br>
 * Project Business Management <br>
 * Analista de Sistemas e Negócios <br>
@@ -56,26 +57,28 @@ Microsoft Partner: 4970237 <br>
 * MCSE Microsoft Windows Server <br>
 <p>  
 </p>
-  Site pessoal:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a>
-<p>
+  Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a>
+<br>
+  Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a>
+<br>
   Blog:  <a href="http://anagauna.wordpress.com"> http://anagauna.wordpress.com </a>
-<p>
+<br>
   Blog:  <a href="http://anagaunatech.blogspot.com"> http://anagaunatech.blogspot.com </a>
 <p>
 Instagram: @amgauna @anagaunatech
-<p>
+<br>
 Twitter: @amgauna  @anagaunatech
 <p>
 email:  amgauna@gmail.com
-<p>
+<br>
 Skype: amgauna@hotmail.com
 <p>
 WhatsApp:  +55(21)97937-1230
 <p>
 Nacionalidade: Brasileira
-<p>
+<br>
 Cidade/UF:  Rio de Janeiro/RJ
-<p>  
+  <p>  </p>
 </div>  <!--  fim primeira coluna  -->
                   
 <div class="col-md-8">                  
@@ -100,17 +103,17 @@ Tenho experiência na execução de diversos tipos de trabalhos de área adminis
   advogados, engenheiros, técnicos de manutenção, contadores e auditores, ajudando eles a utilizarem seus 
   computadores, softwares e internet, resolvendo problemas.  
 <p>
-Tenho muita paciência para analisar dados, analisar problemas técnicos em sofwares (aplicativos), analisar 
-  problemas técnicos em equipamentos, analisar passo-a-passo como processos administrativos são executados, 
-  pesquisando os detalhes, com foco em buscar soluções para problemas, sejam a causa de área técnica ou 
-  de área administrativa. Realizo uma pesquisa até encontrar uma solução.
+Tenho muita paciência para analisar problemas técnicos em sofwares (aplicativos) e em equipamentos,
+  analisar o passo-a-passo como os processos de trabalhos administrativos são executados, 
+  pesquisando os detalhes, com foco em buscar soluções para todos os problemas, sejam a casa deles de área técnica ou 
+  área administrativa. Realizo uma pesquisa analisando tudo até encontrar uma solução.
 <p>
 Tenho experiência com desenvolvimento web de sites (ou Blog) para profissionais liberais com domínio próprio, 
   configuração do Google AdWords, Google AdSence, Google analytics, Google Webmasters, Google Tags, Facebook, 
   criação de imagem para anúncios web.  
  <p>
 Em 2016 eu me cadastrei no ABNT e comprei as normas de Segurança das Informações ISO 27001 / ISO 27002 / ISO 27003 , 
-   que estou estudando aos poucos e começando a fazer trabalhos me baseando nessas normas.   
+   que estudei em 2016/2017, e me baseando nessas normas, já comecei a fazer alguns trabalhos.   
 <p>   
 Eu presto serviços realizando diversos tipos de trabalhos: Consultoria em tecnologia da informação, suporte técnico de informática,
 análise de dados presquisando problemas em área tecnica ou área asministrativa com foco em buscar soluções. Montagem de computadores, 
