--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
   <p> </p>
   <p> </p>
   <p>  </p>
-<img src="http://anagauna.eti.br/img/gauna2.jpg" width="150" height="250">  
-  <p> </p>
+<img src="http://anagauna.eti.br/img/gauna2.jpg" width="250" height="150">  
+  <p> </p> <br>
 CNPJ: 029.052.589/0001-53 <br>
 CRA-RJ: 03-03161 <br>
 Microsoft Partner: 4970237 <br>
-  <p> </p>
+  <p> </p> <br>
 * Senior Business Systems Analyst <br>
 * Project Business Management <br>
 * Analista de Sistemas e Negócios <br>
@@ -55,8 +55,7 @@ Microsoft Partner: 4970237 <br>
 * Suporte Técnico <br>
 * Serviços Data Analytics <br> 
 * MCSE Microsoft Windows Server <br>
-<p>  
-</p>
+<p>  </p>  <br>
   Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a>
 <br>
   Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a>
@@ -92,26 +91,28 @@ Nos últimos 20 anos eu conclui mais de 20 cursos da área de administração e 
 Tenho 27 anos de experiência profissional com carteira de trabalho assinada (CLT). 
 Em Novembro/2014 eu pedi demissão no meu ex-emprego que eu trabalhei de Setembro/1992 até Fevereiro/2015, 
   meu cargo era SubGerente de Serviços de Eletrônica e Informática. Desde então eu estou desempregada, 
-  e trabalhando como profissional liberal autônoma.
-<p>  
-Tenho experiência na execução de diversos tipos de trabalhos de área administrativa e área de computação. 
-  Tenho experiência com controle de contrato de prestação de serviços de manutenção preventiva em computadores, 
+  e trabalhando como profissional liberal autônoma.  Em Novembro/2017 eu abri uma microempresa (MEI).
+  Tenho experiência na execução de diversos tipos de trabalhos de área administrativa e área de computação. 
+  <p>
+  * Tenho experiência com controle de contrato de prestação de serviços de manutenção preventiva em computadores, 
   internet, circuito fechado de televisão, etc.  Tenho experiência com montagem de computadores, instalação e 
   configuração de aplicativos e equipamentos, instalação e configuração de equipamentos wireless diversos. 
   Tenho experiência com recrutamento e seleção de técnicos de informática e eletrônica. Tenho experiência 
-  com supervisão de trabalhos. Tenho experiência com suporte técnico ajudando técnicos de administração,
-  advogados, engenheiros, técnicos de manutenção, contadores e auditores, ajudando eles a utilizarem seus 
-  computadores, softwares e internet, resolvendo problemas.  
-<p>
-Tenho muita paciência para analisar problemas técnicos em sofwares (aplicativos) e em equipamentos,
-  analisar o passo-a-passo como os processos de trabalhos administrativos são executados, 
-  pesquisando os detalhes, com foco em buscar soluções para todos os problemas, sejam a casa deles de área técnica ou 
-  área administrativa. Realizo uma pesquisa analisando tudo até encontrar uma solução.
-<p>
-Tenho experiência com desenvolvimento web de sites (ou Blog) para profissionais liberais com domínio próprio, 
+  com supervisão de trabalhos.  <br>
+  * Tenho experiência com desenvolvimento web de sites (ou Blog) para profissionais liberais com domínio próprio, 
   configuração do Google AdWords, Google AdSence, Google analytics, Google Webmasters, Google Tags, Facebook, 
   criação de imagem para anúncios web.  
  <p>
+  * Tenho experiência com suporte técnico ajudando técnicos de administração,
+  advogados, engenheiros, técnicos de manutenção, contadores e auditores, ajudando eles a utilizarem seus 
+  computadores, softwares e internet, resolvendo problemas.  
+<p>
+* Tenho experiência em análisar problemas técnicos e adminsitraqtivos, em sofwares (aplicativos) e equipamentos,
+  analisando o passo-a-passo como os processos dos trabalhos técniso e administrativos são executados, 
+  pesquisando os detalhes, com foco em buscar soluções para os problemas. Analiso tudo com paciência.
+  Realizo uma pesquisa detalhando tudo até encontrar uma solução viável.
+<p>
+
 Em 2016 eu me cadastrei no ABNT e comprei as normas de Segurança das Informações ISO 27001 / ISO 27002 / ISO 27003 , 
    que estudei em 2016/2017, e me baseando nessas normas, já comecei a fazer alguns trabalhos.   
 <p>   
@@ -122,7 +123,9 @@ instalação de aplicativos e equipamentos, instalação de equipamentos wireles
  integração da configuração do facebook com o instagram, treinamento pessoal, desenvolvimento de sites e blogs para profissionais 
   liberais.   
 <p>   
-Você quer me conhecer um pouco melhor?  Visite o meu site, meus Blogs, meu perfil no Twitter e Instagram.
+Querem me conhecer um pouco melhor?  Visitem os meus sites, meus Blogs, meu perfil no Twitter e Instagram.
+  
+  <p> </p>
   
 </div>  <!--  fim da segunda coluna -->    
    
