--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <p> </p>
   <p> </p>
   <p>  </p>
-<img src="http://anagauna.eti.br/img/gauna2.jpg" width="250" height="150">  
+<img src="https://github.com/amgauna/amgauna.github.io/gauna2.jpg" width="250" height="150">  
   <p> </p> <br>
 CNPJ: 029.052.589/0001-53 <br>
 CRA-RJ: 03-03161 <br>
@@ -78,11 +78,14 @@ Nacionalidade: Brasileira
 <br>
 Cidade/UF:  Rio de Janeiro/RJ
   <p>  </p>
+<img src="https://github.com/amgauna/amgauna.github.io/AnaGauna-2016.jpg" width="250" height="150">
+  <p> </p>
 </div>  <!--  fim primeira coluna  -->
                   
 <div class="col-md-8">                  
   <center>
-  <h1> Ana Mercedes Gauna </h1>
+  <!--  <h1> Ana Mercedes Gauna </h1>   -->
+  <img src="https://github.com/amgauna/amgauna.github.io/gaunanome.gif" width="500" height="100">
 </center>
 <p>
 Formação: Tecnologia em Processamento de Dados (FACHA/RJ) concluído em Julho/2003. <br>
