--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <p> </p>
   <p> </p>
   <p>  </p>
-<img src="amgauna.github.io/AnaGauna-2016.jpg" width="100" height="200">  
+<img src="https://github.com/amgauna/amgauna.github.io/blob/master/AnaGauna-2016.jpg" width="100" height="200">  
   <p> </p> <br>
 CNPJ: 029.052.589/0001-53 <br>
 CRA-RJ: 03-03161 <br>
