--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
   <p> </p>
   <p> </p>
   <p>  </p>
-<img src="https://github.com/amgauna/amgauna.github.io/blob/master/AnaGauna-2016.jpg" width="100" height="200">  
+<img src="/amgauna.github.io/AnaGauna-2016.jpg" width="100" height="150">  
   <p> </p> <br>
 CNPJ: 029.052.589/0001-53 <br>
 CRA-RJ: 03-03161 <br>
 Microsoft Partner: 4970237 <br>
-  <p> </p> <br>
+  <p> </p>
 * Senior Business Systems Analyst <br>
 * Project Business Management <br>
 * Analista de Sistemas e Negócios <br>
@@ -55,7 +55,7 @@ Microsoft Partner: 4970237 <br>
 * Suporte Técnico <br>
 * Serviços Data Analytics <br> 
 * MCSE Microsoft Windows Server <br>
-<p>  </p>  <br>
+<p>  </p> 
   Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a>
 <br>
   Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a>
@@ -63,17 +63,17 @@ Microsoft Partner: 4970237 <br>
   Blog:  <a href="http://anagauna.wordpress.com"> http://anagauna.wordpress.com </a>
 <br>
   Blog:  <a href="http://anagaunatech.blogspot.com"> http://anagaunatech.blogspot.com </a>
-<p>
+  <p> </p>
 Instagram: @amgauna @anagaunatech
 <br>
 Twitter: @amgauna  @anagaunatech
-<p>
+<br>
 email:  amgauna@gmail.com
 <br>
 Skype: amgauna@hotmail.com
-<p>
+<br>
 WhatsApp:  +55(21)97937-1230
-<p>
+<br>
 Nacionalidade: Brasileira
 <br>
 Cidade/UF:  Rio de Janeiro/RJ
@@ -85,7 +85,7 @@ Cidade/UF:  Rio de Janeiro/RJ
 <div class="col-md-8">                  
   <center>
   <!--  <h1> Ana Mercedes Gauna </h1>   -->
-  <img src="/amgauna.github.io/gaunanome-gif.gif" width="300" height="150">
+  <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50">
 </center>
 <p>
 Formação: Tecnologia em Processamento de Dados (FACHA/RJ) concluído em Julho/2003. <br>
