--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <p> </p>
   <p> </p>
   <p>  </p>
-<img src="/amgauna.github.io/AnaGauna-2016.jpg" width="100" height="150">  
+<img src="/amgauna.github.io/AnaGauna-2016.jpg" width="150" height="150">  
   <p> </p> <br>
 CNPJ: 029.052.589/0001-53 <br>
 CRA-RJ: 03-03161 <br>
@@ -82,12 +82,12 @@ Cidade/UF:  Rio de Janeiro/RJ
   <p> </p>
 </div>  <!--  fim primeira coluna  -->
                   
-<div class="col-md-8">                  
+<div class="col-md-8" align="justify">                  
   <center>
   <!--  <h1> Ana Mercedes Gauna </h1>   -->
   <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50">
 </center>
-<p>
+<p> </p> <br>
 Formação: Tecnologia em Processamento de Dados (FACHA/RJ) concluído em Julho/2003. <br>
 Nos últimos 20 anos eu conclui mais de 20 cursos da área de administração e computação.
 <p>
@@ -95,29 +95,31 @@ Tenho 27 anos de experiência profissional com carteira de trabalho assinada (CL
 Em Novembro/2014 eu pedi demissão no meu ex-emprego que eu trabalhei de Setembro/1992 até Fevereiro/2015, 
   meu cargo era SubGerente de Serviços de Eletrônica e Informática. Desde então eu estou desempregada, 
   e trabalhando como profissional liberal autônoma.  Em Novembro/2017 eu abri uma microempresa (MEI).
-  Tenho experiência na execução de diversos tipos de trabalhos de área administrativa e área de computação. 
-  <p>
+  <br>
+  * Tenho experiência na execução de diversos tipos de trabalhos de área administrativa e área de computação. 
+  <br>
   * Tenho experiência com controle de contrato de prestação de serviços de manutenção preventiva em computadores, 
   internet, circuito fechado de televisão, etc.  Tenho experiência com montagem de computadores, instalação e 
   configuração de aplicativos e equipamentos, instalação e configuração de equipamentos wireless diversos. 
   Tenho experiência com recrutamento e seleção de técnicos de informática e eletrônica. Tenho experiência 
-  com supervisão de trabalhos.  <br>
+  com supervisão de trabalhos.  
+  <br>
   * Tenho experiência com desenvolvimento web de sites (ou Blog) para profissionais liberais com domínio próprio, 
   configuração do Google AdWords, Google AdSence, Google analytics, Google Webmasters, Google Tags, Facebook, 
   criação de imagem para anúncios web.  
- <p>
+ <br>
   * Tenho experiência com suporte técnico ajudando técnicos de administração,
   advogados, engenheiros, técnicos de manutenção, contadores e auditores, ajudando eles a utilizarem seus 
   computadores, softwares e internet, resolvendo problemas.  
-<p>
+<br>
 * Tenho experiência em análisar problemas técnicos e adminsitraqtivos, em sofwares (aplicativos) e equipamentos,
   analisando o passo-a-passo como os processos dos trabalhos técniso e administrativos são executados, 
   pesquisando os detalhes, com foco em buscar soluções para os problemas. Analiso tudo com paciência.
   Realizo uma pesquisa detalhando tudo até encontrar uma solução viável.
 <p>
-
-Em 2016 eu me cadastrei no ABNT e comprei as normas de Segurança das Informações ISO 27001 / ISO 27002 / ISO 27003 , 
-   que estudei em 2016/2017, e me baseando nessas normas, já comecei a fazer alguns trabalhos.   
+Em 2015 eu li o manual em inglês da norma ISO 27000 (Segunrança das Informações) em inglês. 
+Em 2016 eu me cadastrei no ABNT e comprei as normas em português ISO 27001 / ISO 27002 / ISO 27003 
+(Normas Técnicas de Segurança das Informações) e me baseando nelas, já comecei a fazer alguns trabalhos.   
 <p>   
 Eu presto serviços realizando diversos tipos de trabalhos: Consultoria em tecnologia da informação, suporte técnico de informática,
 análise de dados presquisando problemas em área tecnica ou área asministrativa com foco em buscar soluções. Montagem de computadores, 
