--- a/index.html
+++ b/index.html
@@ -82,12 +82,13 @@ Cidade/UF:  Rio de Janeiro/RJ
   <p> </p>
 </div>  <!--  fim primeira coluna  -->
                   
-<div class="col-md-8" align="justify">                  
+<div class="col-md-8" align="justify"> 
+  <p> </p>
   <center>
   <!--  <h1> Ana Mercedes Gauna </h1>   -->
   <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50">
 </center>
-<p> </p> <br>
+<p> </p>
 Formação: Tecnologia em Processamento de Dados (FACHA/RJ) concluído em Julho/2003. <br>
 Nos últimos 20 anos eu conclui mais de 20 cursos da área de administração e computação.
 <p>
@@ -96,26 +97,19 @@ Em Novembro/2014 eu pedi demissão no meu ex-emprego que eu trabalhei de Setembr
   meu cargo era SubGerente de Serviços de Eletrônica e Informática. Desde então eu estou desempregada, 
   e trabalhando como profissional liberal autônoma.  Em Novembro/2017 eu abri uma microempresa (MEI).
   <br>
-  * Tenho experiência na execução de diversos tipos de trabalhos de área administrativa e área de computação. 
-  <br>
-  * Tenho experiência com controle de contrato de prestação de serviços de manutenção preventiva em computadores, 
-  internet, circuito fechado de televisão, etc.  Tenho experiência com montagem de computadores, instalação e 
-  configuração de aplicativos e equipamentos, instalação e configuração de equipamentos wireless diversos. 
-  Tenho experiência com recrutamento e seleção de técnicos de informática e eletrônica. Tenho experiência 
-  com supervisão de trabalhos.  
-  <br>
-  * Tenho experiência com desenvolvimento web de sites (ou Blog) para profissionais liberais com domínio próprio, 
-  configuração do Google AdWords, Google AdSence, Google analytics, Google Webmasters, Google Tags, Facebook, 
+  * Tenho experiência na execução de diversos tipos de trabalhos de área administrativa e área de computação: 
+ controle de contrato de prestação de serviços (manutenção preventiva em computadores, internet banda larga, 
+  circuito fechado de televisão, etc), supervisão de trabalhos de terceirizados, experiência com montagem de 
+  computadores, instalação e configuração de aplicativos e equipamentos, instalação e configuração de equipamentos wireless diversos,  
+  recrutamento e seleção de técnicos de informática e eletrônica, desenvolvimento web de sites (em HTML5 responsivo, CSS,
+  Javascript, Boostrap) ou Blogs com dominio próprio para profissionais liberais, configuração de anúncios e dominios internet 
+  no Google AdWords, Google AdSence, Google analytics, Google Webmasters, Google Tags, Facebook, 
   criação de imagem para anúncios web.  
  <br>
-  * Tenho experiência com suporte técnico ajudando técnicos de administração,
-  advogados, engenheiros, técnicos de manutenção, contadores e auditores, ajudando eles a utilizarem seus 
-  computadores, softwares e internet, resolvendo problemas.  
-<br>
-* Tenho experiência em análisar problemas técnicos e adminsitraqtivos, em sofwares (aplicativos) e equipamentos,
-  analisando o passo-a-passo como os processos dos trabalhos técniso e administrativos são executados, 
-  pesquisando os detalhes, com foco em buscar soluções para os problemas. Analiso tudo com paciência.
-  Realizo uma pesquisa detalhando tudo até encontrar uma solução viável.
+  * Tenho experiência com suporte técnico ajudando técnicos de administração, advogados, engenheiros, técnicos de manutenção, 
+  contadores e auditores, ajudando eles a utilizarem seus computadores, softwares e internet, resolvendo problemas.
+  Tenho muita experiência em análisar cuidadosamente e pacientemente os problemas técnicos e administrativos, analisar sofwares (aplicativos) 
+  e equipamentos instalados, pesquisando o passo-a-passo de execução, com foco em buscar uma solução viável.
 <p>
 Em 2015 eu li o manual em inglês da norma ISO 27000 (Segunrança das Informações) em inglês. 
 Em 2016 eu me cadastrei no ABNT e comprei as normas em português ISO 27001 / ISO 27002 / ISO 27003 
