--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Twitter: @amgauna  @anagaunatech
 email:  amgauna@gmail.com
 <br>
 Skype: amgauna@hotmail.com
-<p>
+  <p> </p>
 WhatsApp:  +55(21)97937-1230
 <br>
 Nacionalidade: Brasileira
@@ -89,9 +89,10 @@ Cidade/UF:  Rio de Janeiro/RJ
   <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50">
 </center>
 <p> </p>
-Formação: Tecnologia em Processamento de Dados (FACHA/RJ) concluído em Julho/2003. <br>
-Nos últimos 20 anos eu conclui mais de 20 cursos da área de administração e computação.
+Formação: Tecnologia em Processamento de Dados (FACHA/RJ) concluído em Julho/2003. 
 <p>
+Nos últimos 20 anos eu conclui mais de 20 cursos da área de administração e computação.
+  <p> </p>
 Tenho 27 anos de experiência profissional com carteira de trabalho assinada (CLT). 
 Em Novembro/2014 eu pedi demissão no meu ex-emprego que eu trabalhei de Setembro/1992 até Fevereiro/2015, 
   meu cargo era SubGerente de Serviços de Eletrônica e Informática. Desde então eu estou desempregada, 
