--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ instalação de aplicativos e equipamentos, instalação de equipamentos wireles
  integração da configuração do facebook com o instagram, treinamento pessoal, desenvolvimento de sites e blogs para profissionais 
   liberais.   
 <p>   
-Querem me conhecer um pouco melhor?  Visitem os meus sites, meus Blogs, meu perfil no Twitter e Instagram.
+Querem me conhecer um pouco melhor?  Visitem os meus Sites, meus Blogs, meu perfil no Twitter e Instagram.
   
   <p> </p>
   
