--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Microsoft Partner: 4970237 <br>
 * MCSE Microsoft Windows Server <br>
 * Serviços Data Analytics <br>
 <p>  </p> 
-  Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a>
+  Site:  <a href="http://www.amgauna.eti.br"> http://www.amgauna.eti.br </a>
 <br>
   Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a>
 <br>
@@ -97,7 +97,7 @@ Tenho 27 anos de experiência profissional com carteira de trabalho assinada (CL
 Em Novembro/2014 eu pedi demissão no meu ex-emprego que eu trabalhei de Setembro/1992 até Fevereiro/2015, 
   meu cargo era SubGerente de Serviços de Eletrônica e Informática. Desde então eu estou desempregada, 
   e trabalhando como profissional liberal autônoma.  Em Novembro/2017 eu abri uma microempresa (MEI).
-  <p>
+  <p> </p>
   * Tenho experiência na execução de diversos tipos de trabalhos de área administrativa e área de computação: 
  controle de contrato de prestação de serviços (manutenção preventiva em computadores, internet banda larga, 
   circuito fechado de televisão, etc), supervisão de trabalhos de terceirizados, experiência com montagem de 
