--- a/index.html
+++ b/index.html
@@ -89,9 +89,13 @@ Cidade/UF:  Rio de Janeiro/RJ
   <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50">
 </center>
 <p> </p>
-Formação: Tecnologia em Processamento de Dados (FACHA/RJ) concluído em Julho/2003. 
+Formação Superior: Tecnologia em Processamento de Dados (FACHA/RJ) concluído em Julho/2003. <br>
+Formação Técnica: Assistente de Administração (ensino médio / Colégio Estadual André Maurois) 1981/1983 <br>
+Formação em Programação de computadores (IBPI - Instituto Brasileiro de Pesquisa em Informática) 1986/1987 <br>
+Formação Técnica: MCSE Microsoft Windows Server (2000/2001) / Cisco CCNA1 e CCNA2 R&S (2008) <br>
 <p>
-Nos últimos 20 anos eu conclui mais de 20 cursos da área de administração e computação.
+Tenho 53 anos de idade, sou Brasileira, Carioca, solteira; trabalho usando computadores desde a década de 80, 
+uso internet desde 1995 e nos últimos 20 anos eu conclui mais de 20 cursos da área de administração e computação.
   <p> </p>
 Tenho 27 anos de experiência profissional com carteira de trabalho assinada (CLT). 
 Em Novembro/2014 eu pedi demissão no meu ex-emprego que eu trabalhei de Setembro/1992 até Fevereiro/2015, 
