--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@ Instagram: @amgauna @anagaunatech
 <br>
 Twitter: @amgauna  @anagaunatech
 <br>
+<a href="https://plus.google.com/u/0/+AnaGaunaTech"> Ana Gauna Tech (Google+) </a>
+  <br>
+<a href="https://social.technet.microsoft.com/profile/ana%20gauna/"> Ana Gauna (Microsoft Technet) </a>
+  <br>
 email:  amgauna@gmail.com
 <br>
 Skype: amgauna@hotmail.com
@@ -89,13 +93,10 @@ Cidade/UF:  Rio de Janeiro/RJ
   <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50">
 </center>
 <p> </p>
-Formação Superior: Tecnologia em Processamento de Dados (FACHA/RJ) concluído em Julho/2003. <br>
-Formação Técnica: Assistente de Administração (ensino médio / Colégio Estadual André Maurois) 1981/1983 <br>
-Formação em Programação de computadores (IBPI - Instituto Brasileiro de Pesquisa em Informática) 1986/1987 <br>
-Formação Técnica: MCSE Microsoft Windows Server (2000/2001) / Cisco CCNA1 e CCNA2 R&S (2008) <br>
-<p>
-Tenho 53 anos de idade, sou Brasileira, Carioca, solteira; trabalho usando computadores desde a década de 80, 
-uso internet desde 1995 e nos últimos 20 anos eu conclui mais de 20 cursos da área de administração e computação.
+Tenho 53 anos de idade, sou Brasileira, Carioca, solteira; trabalho usando computadores desde a década de 80, uso internet desde 1995, 
+formada em Tecnologia em Processamento de Dados (FACHA/RJ/2003), Assistente de Administração (Ensino Médio/RJ/1984), Programação de 
+computadores (IBPI/RJ/1987), MCSE Microsoft Windows Server (2000/2001), Cisco Network Academy CCNA1 e CCNA2 R&S (2008),
+e nos últimos 20 anos eu conclui mais de 25 cursos da área de ciência da computação e da área de administração.
   <p> </p>
 Tenho 27 anos de experiência profissional com carteira de trabalho assinada (CLT). 
 Em Novembro/2014 eu pedi demissão no meu ex-emprego que eu trabalhei de Setembro/1992 até Fevereiro/2015, 
