--- a/index.html
+++ b/index.html
@@ -116,10 +116,9 @@ Em Novembro/2014 eu pedi demissão no meu ex-emprego que eu trabalhei de Setembr
   contadores e auditores, ajudando eles a utilizarem seus computadores, softwares e internet, resolvendo problemas.
   Tenho muita experiência em análisar cuidadosamente e pacientemente os problemas técnicos e administrativos, analisar sofwares (aplicativos) 
   e equipamentos instalados, pesquisando o passo-a-passo de execução, com foco em buscar uma solução viável.
-<p>
-Em 2015 eu li o manual em inglês da norma ISO 27000 (Segunrança das Informações) em inglês. 
-Em 2016 eu me cadastrei no ABNT e comprei as normas em português ISO 27001 / ISO 27002 / ISO 27003 
-(Normas Técnicas de Segurança das Informações) e me baseando nelas, já comecei a fazer alguns trabalhos.   
+<p> <p>
+Tenho cadastro na ABNT (Associação Brasileira de Normas Técnicas); em 2016 eu comprei as normas técnicas de Segurança das Informações 
+ISO 27001 / ISO 27002 / ISO 27003 (em português), e me baseando nelas já comecei a fazer alguns trabalhos.   
 <p>   
 Eu presto serviços realizando diversos tipos de trabalhos: Consultoria em tecnologia da informação, suporte técnico de informática,
 análise de dados presquisando problemas em área tecnica ou área asministrativa com foco em buscar soluções. Montagem de computadores, 
