--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@ Microsoft Partner: 4970237 <br>
 * Project Business Management <br>
 * Analista de Sistemas e Negócios <br>
 * Gestão de Projetos TI <br>
-* Analista de Suporte Técnico <br>
+* Analista de Suporte Técnico Senior <br>
 * Analista de Infraestrutura Server <br>
-* MCSE Microsoft Windows Server <br>
 * Serviços Data Analytics <br>
 <p>  </p> 
   Site:  <a href="http://www.amgauna.eti.br"> http://www.amgauna.eti.br </a>
@@ -67,11 +66,11 @@ Microsoft Partner: 4970237 <br>
 Twitter: @amgauna  @anagaunatech
 <br>
 Instagram: @amgauna @anagaunatech
-<br>
+  <p> </p>
 <a href="https://plus.google.com/u/0/+AnaGaunaTech"> Ana Gauna Tech (Google+) </a>
   <br>
 <a href="https://social.technet.microsoft.com/profile/ana%20gauna/"> Ana Gauna (Microsoft Technet) </a>
-  <br>
+  <p> </p>
 email:  amgauna@gmail.com
 <br>
 Skype: amgauna@hotmail.com
@@ -129,7 +128,7 @@ instalação de aplicativos e equipamentos, instalação de equipamentos wireles
 <p>   
 Querem me conhecer um pouco melhor?  Visitem os meus Sites, meus Blogs, meu perfil no Twitter e Instagram.
   
-  <p> </p>
+  <p> </p> <br>
   
 </div>  <!--  fim da segunda coluna -->    
    
