--- a/index.html
+++ b/index.html
@@ -133,12 +133,13 @@ Querem me conhecer um pouco melhor?  Visitem os meus Sites, meus Blogs, meu perf
 </div>  <!--  fim da segunda coluna -->    
    
 <div class="col-md-2">
+  <p> </p> <br>
 * MS-DOS <br> * Windows Server <br> * Windows NT <br> * Windows 95 <br> * Windows 98 <br> * Windows Vista <br> * Windows XP <br>
 * Microsoft Office <br> * Word <br> * Excel <br> * PowerPoint <br> * Access <br> * MS Visio <br> * MS Project <br>
 * Corel Draw <br> * Adobe Photoshop <br> * HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS <br> * JavaScript <br> * Bootstrap <br> 
-* Symantec Norton <br> * Kaspersky Security <br> * McAfee <br> * Intel Security <br> * ESET Security <br> * Trend Micro Security <vr>
-* AVG Security <br> * AVAST Security <br> ISO 27000 <br> * ISO 270001 <br> * ISO 27002 <br> * ISO 27003 <br>
-</div> fim terceira coluna -->
+* Symantec Norton <br> * Kaspersky Security <br> * McAfee <br> * Intel Security <br> * ESET Security <br> * Trend Micro Security <br>
+* AVG Security <br> * AVAST Security <br> * ISO 27000 <br> * ISO 270001 <br> * ISO 27002 <br> * ISO 27003 <br>
+</div>  <!--  fim terceira coluna -->
                 
  </div>  <!--  row -->    
  </div>  <!--  container -->
