--- a/index.html
+++ b/index.html
@@ -134,11 +134,15 @@ Querem me conhecer um pouco melhor?  Visitem os meus Sites, meus Blogs, meu perf
    
 <div class="col-md-2">
   <p> </p> <br>
-* MS-DOS <br> * Windows Server <br> * Windows NT <br> * Windows 95 <br> * Windows 98 <br> * Windows Vista <br> * Windows XP <br>
-* Microsoft Office <br> * Word <br> * Excel <br> * PowerPoint <br> * Access <br> * MS Visio <br> * MS Project <br>
-* Corel Draw <br> * Adobe Photoshop <br> * HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS <br> * JavaScript <br> * Bootstrap <br> 
+* MS-DOS <br> * Windows Server <br> * Windows NT4 <br> * Windows 95 <br> * Windows 98 <br> * Windows Vista <br> * Windows XP <br>
+* Windows 2000 Server <br> * Microsoft SQL Server <br> * Oracle MySQL Server * Windows 2012 Server <br> * FoxPRO <br> 
+* IBM Lotus 1-2-3 <br> * ITIL <br> * Cobit <br> * Linux <br> 
+* Windows 7 <br> * Windows 8 <br> Windows 10 <br> * Windows 2016 Server <br> * Corel Draw <br> * Adobe Photoshop <br> 
+* Microsoft Office <br> * MS Word <br> * MS Excel <br> * PowerPoint <br> * Access <br> * MS Visio <br> * MS Project <br>
+* HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS <br> * JavaScript <br> * Bootstrap <br> * Java <br> * PHP <br> * Wordpress <br> * Blogspot <br>
 * Symantec Norton <br> * Kaspersky Security <br> * McAfee <br> * Intel Security <br> * ESET Security <br> * Trend Micro Security <br>
-* AVG Security <br> * AVAST Security <br> * ISO 27000 <br> * ISO 270001 <br> * ISO 27002 <br> * ISO 27003 <br>
+* AVG Security <br> * AVAST Security <br> * ISO 27000 <br> * ISO 270001 <br> * ISO 27002 <br> * ISO 27003 <br> 
+
 </div>  <!--  fim terceira coluna -->
                 
  </div>  <!--  row -->    
