--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ Querem me conhecer um pouco melhor?  Visitem os meus Sites, meus Blogs, meu perf
 * FoxPRO <br> * IBM Lotus 1-2-3 <br> * Windows 95 <br> * Windows 98 <br> * Windows Vista <br> * Windows XP <br> 
 * Windows 2012 Server <br> * Windows 7 <br> * Windows 8 <br> * Windows 10 <br> * Windows 2016 Server <br> 
 * Corel Draw <br> * Adobe Photoshop <br> * MS Word <br> * MS Excel <br> * PowerPoint <br> * MS Access <br> 
-* MS Visio <br> * MS Project <br> *HTML3 <r> * HTML4 <br> * HTML5 <br> * CSS <br> * JavaScript <br> 
+* MS Visio <br> * MS Project <br> *HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS <br> * JavaScript <br> 
 * Bootstrap <br> * Java <br> * PHP <br> * Wordpress <br> * Blogger <br>
 * Symantec Norton <br> * Kaspersky Security <br> * McAfee <br> * Intel Security <br> * ESET Security <br> * Trend Micro Security <br>
 * AVG Security <br> * AVAST Security <br> * ISO 27000 <br> * ISO 27001 <br> * ISO 27002 <br> * ISO 27003 <br> * ITIL <br> * Cobit <br> 
