--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@ ISO 27001 / ISO 27002 / ISO 27003 (em português), e me baseando nelas já comec
 <p>   
 Eu presto serviços realizando diversos tipos de trabalhos: Consultoria em tecnologia da informação, suporte técnico de informática,
 análise de dados presquisando problemas em área tecnica ou área asministrativa com foco em buscar soluções. Montagem de computadores, 
-instalação de aplicativos e equipamentos, instalação de equipamentos wireless (impressora wif, roteador, eifi, televisor Smart-TV wifi, 
- etc, elaboração de imagens para publicidade em redes sociais (facebook / instagram), configuração de publicidade no facebook, 
+instalação de aplicativos e equipamentos, instalação de equipamentos wireless (roteador wifi, impressora wifi, Games wifi, som wifi, 
+dispositivos NFC wifi, televisor Smart-TV wifi, etc, 
+elaboração de imagens para publicidade em redes sociais (facebook / instagram), configuração de publicidade no facebook, 
  integração da configuração do facebook com o instagram, treinamento pessoal, desenvolvimento de sites e blogs para profissionais 
   liberais.   
 <p>   
