--- a/index.html
+++ b/index.html
@@ -111,21 +111,21 @@ Em Novembro/2014 eu pedi demissão no meu ex-emprego que eu trabalhei de Setembr
   no Google AdWords, Google AdSence, Google analytics, Google Webmasters, Google Tags, Facebook, 
   criação de imagem para anúncios web.  
   <p> </p>
-  * Tenho experiência com suporte técnico ajudando técnicos de administração, advogados, engenheiros, técnicos de manutenção, 
-  contadores e auditores, ajudando eles a utilizarem seus computadores, softwares e internet, resolvendo problemas.
-  Tenho muita experiência em análisar cuidadosamente e pacientemente os problemas técnicos e administrativos, analisar sofwares (aplicativos) 
-  e equipamentos instalados, pesquisando o passo-a-passo de execução, com foco em buscar uma solução viável.
+  * Tenho muita experiência com suporte técnico no meu ex-emprego (1992 até 2014), ajudando diversos profissionais (técnicos de administração, 
+  advogados, engenheiros, técnicos de manutenção, contadores e auditores), ajudando a utilizarem seus computadores, softwares e internet, resolvendo problemas.
+  Tenho muita experiência, sou muito paciente, analiso prestando muita atenção nos detalhes, os problemas técnicos e administrativos 
+  de sofwares (aplicativos) e equipamentos instalados, pesquisando o passo-a-passo de execução, com foco em buscar uma solução viável.
 <p> <p>
 Tenho cadastro na ABNT (Associação Brasileira de Normas Técnicas); em 2016 eu comprei as normas técnicas de Segurança das Informações 
 ISO 27001 / ISO 27002 / ISO 27003 (em português), e me baseando nelas já comecei a fazer alguns trabalhos.   
 <p>   
-Eu presto serviços realizando diversos tipos de trabalhos: Consultoria em tecnologia da informação, suporte técnico de informática,
-análise de dados presquisando problemas em área tecnica ou área asministrativa com foco em buscar soluções. Montagem de computadores, 
+Eu presto serviços, realizando diversos tipos de trabalhos: Consultoria em Tecnologia da Informação, suporte técnico de informática,
+análise de dados pesquisando problemas em área tecnica ou área administrativa com foco em buscar soluções. Montagem de computadores, 
 instalação de aplicativos e equipamentos, instalação de equipamentos wireless (roteador wifi, impressora wifi, Games wifi, som wifi, 
-dispositivos NFC wifi, televisor Smart-TV wifi, etc, 
+dispositivos NFC wifi, televisor Smart-TV wifi, 
 elaboração de imagens para publicidade em redes sociais (facebook / instagram), configuração de publicidade no facebook, 
  integração da configuração do facebook com o instagram, treinamento pessoal, desenvolvimento de sites e blogs para profissionais 
-  liberais.   
+  liberais, etc.  
 <p>   
 Querem me conhecer um pouco melhor?  Visitem os meus Sites, meus Blogs, meu perfil no Twitter e Instagram.
   
