--- a/index.html
+++ b/index.html
@@ -126,9 +126,14 @@ dispositivos NFC wifi, televisor Smart-TV wifi,
 elaboração de imagens para publicidade em redes sociais (facebook / instagram), configuração de publicidade no facebook, 
  integração da configuração do facebook com o instagram, treinamento pessoal, desenvolvimento de sites e blogs para profissionais 
   liberais, etc.  
-<p>   
-Querem me conhecer um pouco melhor?  Visitem os meus Sites, meus Blogs, meu perfil no Twitter e Instagram.
+  <p> </p>  
+Querem me conhecer um pouco melhor?  Visitem os meus Sites, meus Blogs, meu perfil no Twitter, Instagram, Google+ , Linkedin, etc.
+  <p> </p>
+Em 2013/2014/2015/2016/2017 nós Cariocas enfrentamos um crise financeira muito séria no Estado do Rio de Janeiro/RJ (Brasil).
+Desejo a todos nós que este ano de 2018 seja cheio de saúde, felicidade, muito trabalho, e boa sorte, para todos nós.
   
+  <p> </p> <br>
+Rio de Janeiro, 27/01/2018.
   <p> </p> <br>
   
 </div>  <!--  fim da segunda coluna -->    
