--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Cidade/UF:  Rio de Janeiro/RJ
 </center>
 <p> </p>
 Tenho 53 anos de idade, sou Brasileira, Carioca, solteira; trabalho usando computadores desde a década de 80, uso internet desde 1995, 
-formada em Tecnologia em Processamento de Dados (FACHA/RJ/2003), Assistente de Administração (Ensino Médio/RJ/1984), Programação de 
+formada em Tecnologia de Processamento de Dados (FACHA/RJ/2003), Assistente de Administração (Ensino Médio/RJ/1984), Programação de 
 computadores (IBPI/RJ/1987), MCSE Microsoft Windows Server (2000/2001), Cisco Network Academy CCNA1 e CCNA2 R&S (2008),
 e nos últimos 20 anos eu conclui mais de 25 cursos da área de ciência da computação e da área de administração.
   <p> </p>
