--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@ Rio de Janeiro, 27/01/2018.
 * MS Visio <br> * MS Project <br> * HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS <br> * JavaScript <br> 
 * Bootstrap <br> * Java <br> * PHP <br> * Wordpress <br> * Blogger <br>
 * Symantec Norton <br> * Kaspersky Security <br> * McAfee <br> * Intel Security <br> * ESET Security <br> * Trend Micro Security <br>
-* AVG Security <br> * AVAST Security <br> * ISO 27000 <br> * ISO 27001 <br> * ISO 27002 <br> * ISO 27003 <br> * ITIL <br> * Cobit <br> 
+* AVG Security <br> * AVAST Security <br> * ISO 27000 <br> * ISO 27001 <br> * ISO 27002 <br> * ISO 27003 <br> * ITIL <br> * Cobit <br>
+* Administração <br> * Organização & Métodos <br> * Contabilidade <br> * Legislação * Direito Digital <br> Privacidade Digital <br>
 
 </div>  <!--  fim terceira coluna -->
                 
