--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Rio de Janeiro, 27/01/2018.
 * Bootstrap <br> * Java <br> * PHP <br> * Wordpress <br> * Blogger <br>
 * Symantec Norton <br> * Kaspersky Security <br> * McAfee <br> * Intel Security <br> * ESET Security <br> * Trend Micro Security <br>
 * AVG Security <br> * AVAST Security <br> * ISO 27000 <br> * ISO 27001 <br> * ISO 27002 <br> * ISO 27003 <br> * ITIL <br> * Cobit <br>
-* Administração <br> * Organização & Métodos <br> * Contabilidade <br> * Legislação * Direito Digital <br> Privacidade Digital <br>
+* Administração <br> * Organização & Métodos <br> * Contabilidade <br> * Legislação <br> * Direito Digital <br> * Privacidade Digital <br>
 
 </div>  <!--  fim terceira coluna -->
                 
