--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ elaboração de imagens para publicidade em redes sociais (facebook / instagram)
   <p> </p>  
 Querem me conhecer um pouco melhor?  Visitem os meus Sites, meus Blogs, meu perfil no Twitter, Instagram, Google+ , Linkedin, etc.
   <p> </p>
-Em 2013/2014/2015/2016/2017 nós Cariocas enfrentamos um crise financeira muito séria no Estado do Rio de Janeiro/RJ (Brasil).
+Em 2013/2014/2015/2016/2017 nós Cariocas enfrentamos uma crise financeira muito séria no Estado do Rio de Janeiro/RJ (Brasil).
 Desejo a todos nós que este ano de 2018 seja cheio de saúde, felicidade, muito trabalho, e boa sorte, para todos nós.
   
   <p> </p> <br>
