--- a/index.html
+++ b/index.html
@@ -87,26 +87,30 @@ Cidade/UF:  Rio de Janeiro/RJ
             
 </div>  <!--  fim primeira coluna  -->
   
-<div class="col-md-2">
+<div class="col-md-3">
   <p> </p> <br>
-* MS-DOS <br> * Linux <br> * Windows NT4 Server <br> * Windows 2000 Server <br>  * MS SQL 2000 Server <br>
-* FoxPRO <br> * IBM Lotus 1-2-3 <br> * Windows 95 <br> * Windows 98 <br> * Windows Vista <br> * Windows XP <br> 
-* Windows 2012 Server <br> * Windows 7 <br> * Windows 8 <br> * Windows 10 <br> * Windows 2016 Server <br> 
+* MS-DOS <br> * FoxPRO <br> * IBM Lotus 1-2-3 <br> * Linux <br> 
+* Windows NT4 Server <br> * Windows 2000 Server <br>  * Windows 2012 Server <br> * Windows 2016 Server <br>
+* Microsof SQL 2000 Server <br> * Microsof SQL 2008 Server <br>  * Microsof SQL 2016 Server <br> 
+* Microsof SQL 2012 Express <br> * Microsof SQL 2014 Express <br>
+* Windows 3.11 <br> * Windows 95 <br> * Windows 98 <br> * Windows Vista <br> * Windows XP <br> 
+* Windows 7 <br> * Windows 8 <br> * Windows 10 <br>  
 * Corel Draw <br> * Adobe Photoshop <br> * MS Word <br> * MS Excel <br> * PowerPoint <br> * MS Access <br> 
-* MS Visio <br> * MS Project <br> * HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS <br> * JavaScript <br> 
-* Bootstrap <br> * Java <br> * PHP <br> * Wordpress <br> * Blogger <br>
+* MS Visio <br> * MS Project <br> 
+</div> 
+ 
+<div class="col-md-3">            
+* HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS3 <br> * JavaScript <br> 
+* Bootstrap 3.3.7 <br> * Java <br> * PHP5 <br> * PHP7 <br>  * Wordpress <br> * Blogger <br>
 * Symantec Norton <br> * Kaspersky Security <br> * McAfee <br> * Intel Security <br> * ESET Security <br> * Trend Micro Security <br>
 * AVG Security <br> * AVAST Security <br> * ISO 27000 <br> * ISO 27001 <br> * ISO 27002 <br> * ISO 27003 <br> * ITIL <br> * Cobit <br>
 * Administração <br> * Organização & Métodos <br> * Contabilidade <br> * Legislação <br> * Direito Digital <br> * Privacidade Digital <br>
-
-</div>  <!--  fim terceira coluna -->
+</div>  
                 
  </div>  <!--  row -->    
  </div>  <!--  container -->
  </div>  <!--  section  -->
   
-  
- 
   
 </body>
   
