--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      <div class="container">
           <div class="row">
                                 
-<div class="col-md-6">
+<div class="col-md-3">
   <p> </p>
   <p> </p>
   <p>  </p>
@@ -45,31 +45,6 @@ Microsoft Partner: 5126593 <br>
 * Analista de Infraestrutura Cliente-Servidor <br>
 * Serviços Data Analytics <br>
 <p>  </p> 
-  Site:  <a href="http://www.amgauna.com.br"> http://www.amgauna.com.br </a>
-<br>
-  Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a>
-<br>
-  Blog:  <a href="http://anagauna.wordpress.com"> http://anagauna.wordpress.com </a>
-<br>
-  Blog:  <a href="http://anagaunatech.blogspot.com"> http://anagaunatech.blogspot.com </a>
- <br>
-  Linkedin: <a href="https://www.linkedin.com/in/amgauna"> https://www.linkedin.com/in/amgauna </a>
-  <br>
-  Google++:  <a href="https://plus.google.com/u/0/+AnaGaunaTech"> https://plus.google.com/u/0/+AnaGaunaTech </a>
-  <br>
-  Behance: <a href="https://www.behance.net/amgauna"> https://www.behance.net/amgauna </a>
-  <br>
-  Gravatar: <a href="https://pt.gravatar.com/amgauna"> https://pt.gravatar.com/amgauna </a>
-  <p> </p>
-Twitter: @amgauna  @anagaunatech
-<br>
-Instagram: @amgauna @anagaunatech
- <br>
- GitHUB: @amgauna
-  <p> </p>
-<a href="https://plus.google.com/u/0/+AnaGaunaTech"> Ana Gauna Tech (Google+) </a>
-  <br>
-<a href="https://social.technet.microsoft.com/profile/ana%20gauna/"> Ana Gauna (Microsoft Technet) </a>
   <p> </p>
 email:  amgauna@gmail.com
 <br>
@@ -85,7 +60,35 @@ Cidade/UF:  Rio de Janeiro/RJ
   <p> </p>
 
             
-</div>  <!--  fim primeira coluna  -->
+
+ </div>
+  
+ <div class="col-md-3">
+ <p> </p> <br>
+  Twitter: @amgauna  @anagaunatech
+<br>
+Instagram: @amgauna @anagaunatech
+ <br>
+ GitHUB: @amgauna
+  Site:  <a href="http://www.amgauna.com.br"> http://www.amgauna.com.br </a>
+<br>
+  Site:  <a href="http://www.anagauna.eti.br"> http://www.anagauna.eti.br </a>
+<br>
+  Blog:  <a href="http://anagauna.wordpress.com"> http://anagauna.wordpress.com </a>
+<br>
+  Blog:  <a href="http://anagaunatech.blogspot.com"> http://anagaunatech.blogspot.com </a>
+ <br>
+  Linkedin: <a href="https://www.linkedin.com/in/amgauna"> https://www.linkedin.com/in/amgauna </a>
+  <br>
+  Google++:  <a href="https://plus.google.com/u/0/+AnaGaunaTech"> https://plus.google.com/u/0/+AnaGaunaTech </a>
+  <br>
+  Microsoft Technet: <a href="https://social.technet.microsoft.com/profile/ana%20gauna/"> https://social.technet.microsoft.com/profile/ana%20gauna/ </a>
+  <br>
+  Behance: <a href="https://www.behance.net/amgauna"> https://www.behance.net/amgauna </a>
+  <br>
+  Gravatar: <a href="https://pt.gravatar.com/amgauna"> https://pt.gravatar.com/amgauna </a>
+  <p> </p>
+</div>
   
 <div class="col-md-3">
   <p> </p> <br>
