--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
 <div class="section">
      <div class="container">
           <div class="row">
- 
+
+<div class="col-md-12">
 <p> </p>
   <center>
   <!--  <h1> Ana Mercedes Gauna </h1>   -->
   <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50">
 </center>
-<p> </p>            
+<p> </p>
+</div>
             
 <div class="col-md-3">
   <p> </p>
