--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
 CRA-RJ: 03-03161 <br>
 CNPJ: 029.052.589/0001-53 <br>
 Microsoft Partner: 5126593 <br>
-  <p> </p> <br>
-Nacionalidade: Brasileira
-<br>
-Cidade/UF:  Rio de Janeiro/RJ
+  <p> </p>
+Nacionalidade: Brasileira <br>
+Cidade/UF:  Rio de Janeiro/RJ <br>
+  <p>
+WhatsApp: +55 (21) 97937-1230 <br>
+Hangounts: amgauna@gmail.com <br>
+Skype: amgauna@hotmail.com
+  <p> </p>
   <p> </p>
 * Senior Business Systems Analyst <br>
 * Project Business Management <br>
@@ -52,20 +56,12 @@ Cidade/UF:  Rio de Janeiro/RJ
 * Analista de Infraestrutura <br>
   Cliente-Servidor Windows <br>
 * Serviços Data Analytics <br>
-<p>  </p> 
- WhatsApp:  +55(21)97937-1230
-  <p> </p>
-email:  amgauna@gmail.com
-<br>
-Skype: amgauna@hotmail.com
-  <p> </p>
-<br>
   <p>  </p>
 <img src="/amgauna.github.io/gauna2.jpg" width="200" height="60">  
   <p> </p>
  </div>
   
- <div class="col-md-3">
+ <div class="col-md-4">
  <p> </p> <br>
   Twitter: @amgauna  @anagaunatech
 <br>
@@ -92,7 +88,7 @@ Instagram: @amgauna @anagaunatech
   <p> </p>
 </div>
   
-<div class="col-md-3">
+<div class="col-md-2">
   <p> </p> <br>
 * MS-DOS <br> * FoxPRO <br> * IBM Lotus 1-2-3 <br> * Linux <br> 
 * Windows NT4 Server <br> * Windows 2000 Server <br>  * Windows 2012 Server <br> * Windows 2016 Server <br>
@@ -104,7 +100,7 @@ Instagram: @amgauna @anagaunatech
 * MS Visio <br> * MS Project <br> 
 </div> 
  
-<div class="col-md-3">   
+<div class="col-md-2">   
   <p> </p> <br>
 * HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS3 <br> * JavaScript <br> 
 * Bootstrap 3.3.7 <br> * Java <br> * PHP5 <br> * PHP7 <br>  * Wordpress <br> * Blogger <br>
