--- a/index.html
+++ b/index.html
@@ -85,13 +85,16 @@ Instagram: @amgauna @anagaunatech
   Gravatar: <a href="https://pt.gravatar.com/amgauna"> https://pt.gravatar.com/amgauna </a>
   <p> </p>
 </div>
-  
-<div class="col-md-2">
-  <p> </p> <br>
-* MS-DOS <br> * FoxPRO <br> * IBM Lotus 1-2-3 <br> * Linux <br> 
+
+<div class="col-md-4">
 * Windows NT4 Server <br> * Windows 2000 Server <br>  * Windows 2012 Server <br> * Windows 2016 Server <br>
 * Microsof SQL 2000 Server <br> * Microsof SQL 2008 Server <br>  * Microsof SQL 2016 Server <br> 
 * Microsof SQL 2012 Express <br> * Microsof SQL 2014 Express <br>
+</div>
+            
+<div class="col-md-2">
+  <p> </p> <br>
+* MS-DOS <br> * FoxPRO <br> * IBM Lotus 1-2-3 <br> * Linux <br> 
 * Windows 3.11 <br> * Windows 95 <br> * Windows 98 <br> * Windows Vista <br> * Windows XP <br> 
 * Windows 7 <br> * Windows 8 <br> * Windows 10 <br>  
 * Corel Draw <br> * Adobe Photoshop <br> * MS Word <br> * MS Excel <br> * PowerPoint <br> * MS Access <br> 
