--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Skype: amgauna@hotmail.com
   <p> </p>
  </div>
   
- <div class="col-md-4">
+ <div class="col-md-6">
  <p> </p> <br>
   Twitter: @amgauna  @anagaunatech
 <br>
@@ -105,9 +105,24 @@ Instagram: @amgauna @anagaunatech
   <p> </p> <br>
 * HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS3 <br> * JavaScript <br> 
 * Bootstrap 3.3.7 <br> * Java <br> * PHP5 <br> * PHP7 <br>  * Wordpress <br> * Blogger <br>
-* Symantec Norton <br> * Kaspersky Security <br> * McAfee <br> * Intel Security <br> * ESET Security <br> * Trend Micro Security <br>
-* AVG Security <br> * AVAST Security <br> * ISO 27000 <br> * ISO 27001 <br> * ISO 27002 <br> * ISO 27003 <br> * ITIL <br> * Cobit <br>
-* Administração <br> * Organização & Métodos <br> * Contabilidade <br> * Legislação <br> * Direito Digital <br> * Privacidade Digital <br>
+</div>
+
+            
+<div class="col-md-2">   
+<p> </p> <br>            
+* Symantec Norton <br> * Kaspersky Security <br> * McAfee <br> * Intel Security <br> * ESET Security <br> 
+* Trend Micro Security <br> * AVG Security <br> * AVAST Security <br> 
+</div> 
+
+<div class="col-md-2">   
+  <p> </p> <br>
+* ISO 27000 <br> * ISO 27001 <br> * ISO 27002 <br> * ISO 27003 <br> * ITIL <br> * Cobit <br>
+</div>  
+ 
+<div class="col-md-2">   
+  <p> </p> <br>
+* Administração <br> * Organização & Métodos <br> * Contabilidade <br> * Legislação <br>
+* Direito Digital <br> * Privacidade Digital <br>
 </div>  
                 
  </div>  <!--  row -->    
