--- a/index.html
+++ b/index.html
@@ -93,11 +93,19 @@ Instagram: @amgauna @anagaunatech
 </div>
             
 <div class="col-md-2">
-  <p> </p> <br>
-* MS-DOS <br> * FoxPRO <br> * IBM Lotus 1-2-3 <br> * Linux <br> 
-* Windows 3.11 <br> * Windows 95 <br> * Windows 98 <br> * Windows Vista <br> * Windows XP <br> 
-* Windows 7 <br> * Windows 8 <br> * Windows 10 <br>  
-* Corel Draw <br> * Adobe Photoshop <br> * MS Word <br> * MS Excel <br> * PowerPoint <br> * MS Access <br> 
+  <p> </p>
+* MS-DOS <br> * Windows 3.11 <br> * Windows 95 <br> * Windows 98 <br> * Windows Vista <br> 
+* Windows XP <br> * Windows 7 <br> * Windows 8 <br> * Windows 10 <br>  
+</div>  
+
+<div class="col-md-2">
+  <p> </p>
+* FoxPRO <br> * IBM Lotus 1-2-3 <br> * Linux <br> * Corel Draw <br> * Adobe Photoshop <br> 
+ </div>  
+
+<div class="col-md-2">
+  <p> </p>            
+* MS Word <br> * MS Excel <br> * PowerPoint <br> * MS Access <br> 
 * MS Visio <br> * MS Project <br> 
 </div> 
  
