--- a/index.html
+++ b/index.html
@@ -88,15 +88,17 @@ Instagram: @amgauna @anagaunatech
 </div>
 
 <div class="col-md-3">
-* Windows NT4 Server <br> * Windows 2000 Server <br>  * Windows 2012 Server <br> * Windows 2016 Server <br>
-* Microsof SQL 2000 Server <br> * Microsof SQL 2008 Server <br>  * Microsof SQL 2016 Server <br> 
+  <b> Sistema Operacional </b> <br>
+* MS-DOS <br> * Windows NT4 Server <br>  * Windows 3.11 <br> * Windows 95 <br> * Windows 98 <br> 
+* Windows 2000 Server <br> * Windows Vista <br> * Windows XP <br>
+* Windows 2012 Server <br>  * Windows 7 <br> * Windows 8 <br> * Windows 2016 Server <br> * Windows 10 <br>  
+<p> </p> 
+<b> Banco de Dados </b> 
+* DBase III <br> * CA-Clipper5 <br>
+* Microsof SQL 2000 Server <br>  * Microsof SQL 2008 Server <br> 
 * Microsof SQL 2012 Express <br> * Microsof SQL 2014 Express <br>
-   <p> </p> 
-</div>
-            
-<div class="col-md-2">
-* MS-DOS <br> * Windows 3.11 <br> * Windows 95 <br> * Windows 98 <br> * Windows Vista <br> 
-* Windows XP <br> * Windows 7 <br> * Windows 8 <br> * Windows 10 <br>  
+* Microsof SQL 2008 Server <br>  * Microsof SQL 2016 Server <br> 
+<p> </p> 
 </div>  
 
 <div class="col-md-2">
