--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@ Microsoft Partner: 5126593 <br>
   <p> </p>
 Nacionalidade: Brasileira <br>
 Cidade/UF:  Rio de Janeiro/RJ <br>
-  <p>
+  <p> </p>
 WhatsApp: +55 (21) 97937-1230 <br>
+  <p> </p>
 Hangounts: amgauna@gmail.com <br>
 Skype: amgauna@hotmail.com
   <p> </p>
@@ -62,9 +63,9 @@ Skype: amgauna@hotmail.com
  <div class="col-md-4">
  <p> </p> <br>
   Twitter: @amgauna  @anagaunatech
-<br>
+<p>
 Instagram: @amgauna @anagaunatech
- <br>
+ <p>
  GitHUB: @amgauna
   <p>
   Site:  <a href="http://www.amgauna.com.br"> http://www.amgauna.com.br </a>
@@ -89,11 +90,11 @@ Instagram: @amgauna @anagaunatech
 
 <div class="col-md-3">
   <b> Sistema Operacional </b> <br>
-* MS-DOS <br> * Windows NT4 Server <br>  * Windows 3.11 <br> * Windows 95 <br> * Windows 98 <br> 
+* Linux <br> * MS-DOS <br> * Windows NT4 Server <br>  * Windows 3.11 <br> * Windows 95 <br> * Windows 98 <br> 
 * Windows 2000 Server <br> * Windows Vista <br> * Windows XP <br>
 * Windows 2012 Server <br>  * Windows 7 <br> * Windows 8 <br> * Windows 2016 Server <br> * Windows 10 <br>  
 <p> </p> 
-<b> Banco de Dados </b> 
+<b> Banco de Dados </b> <br>
 * DBase III <br> * CA-Clipper5 <br>
 * Microsof SQL 2000 Server <br>  * Microsof SQL 2008 Server <br> 
 * Microsof SQL 2012 Express <br> * Microsof SQL 2014 Express <br>
@@ -102,37 +103,42 @@ Instagram: @amgauna @anagaunatech
 </div>  
 
 <div class="col-md-2">
-* FoxPRO <br> * IBM Lotus 1-2-3 <br> * Linux <br> * Corel Draw <br> * Adobe Photoshop <br> 
+* FoxPRO <br> * IBM Lotus 1-2-3 <br>  * Corel Draw <br> * Adobe Photoshop <br> 
     <p> </p>
  </div>  
 
-<div class="col-md-2">         
+<div class="col-md-2"> 
+<b> MS Office 365 </b> <br>
 * MS Word <br> * MS Excel <br> * PowerPoint <br> * MS Access <br> 
 * MS Visio <br> * MS Project <br>
     <p> </p>
 </div> 
  
-<div class="col-md-2">   
+<div class="col-md-2"> 
+  <b> Programação Web </b> <br>
 * HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS3 <br> * JavaScript <br> 
 * Bootstrap 3.3.7 <br> * Java <br> * PHP5 <br> * PHP7 <br>  * Wordpress <br> * Blogger <br>
     <p> </p>
 </div>
 
             
-<div class="col-md-2">           
-* Symantec Norton <br> * Kaspersky Security <br> * McAfee <br> * Intel Security <br> * ESET Security <br> 
+<div class="col-md-2">
+  <b> Antivírus / SSL </b> <br>
+* Symantec Norton <br> * Kaspersky Security <br> * McAfee Security <br> * Intel Security <br> * ESET Security <br> 
 * Trend Micro Security <br> * AVG Security <br> * AVAST Security <br>
     <p> </p>
 </div> 
 
 <div class="col-md-2">   
-* ISO 27000 <br> * ISO 27001 <br> * ISO 27002 <br> * ISO 27003 <br> * ITIL <br> * Cobit <br>
+* ISO 27000 <br> * ISO 27001 <br> * ISO 27002 <br> * ISO 27003 <br> 
+* Axelos ITIL3 <br> * Isaca Cobit5 <br> * PMI <br> * CompTIA <br>
     <p> </p>
 </div>  
  
 <div class="col-md-2">   
-* Administração <br> * Organização & Métodos <br> * Contabilidade <br> * Legislação <br>
-* Direito Digital <br> * Privacidade Digital <br>
+* Administração & Controle <br> * Organização & Métodos <br> * Contabilidade & Finanças <br>
+* Direito & Legislação <br> * Psicologia <br> * Matemática Financeira <br>
+* Direito Digital <br> * Privacidade Digital <br> * Big Data <br> * Data Analytics <br>  
     <p> </p>
 </div>  
                 
