--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Instagram: @amgauna @anagaunatech
 * MS Word <br> * MS Excel <br> * PowerPoint <br> * MS Access <br> 
 * MS Visio <br> * MS Project <br>
 <p> </p>
-  <b>Graphic Design </b>
+  <b>Graphic Design </b> <br>
 * Corel Draw <br> * Adobe Photoshop <br> 
 </div>  
 
