--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@ Skype: amgauna@hotmail.com
   
  <div class="col-md-4">
  <p> </p> <br>
-  Twitter: @amgauna  @anagaunatech
+  Twitter: @amgauna @anagaunatech <br>
 <p>
-Instagram: @amgauna @anagaunatech
+Instagram: @amgauna @anagaunatech <br>
  <p>
  GitHUB: @amgauna
   <p>
@@ -85,7 +85,15 @@ Instagram: @amgauna @anagaunatech
   Behance: <a href="https://www.behance.net/amgauna"> https://www.behance.net/amgauna </a>
   <p>
   Gravatar: <a href="https://pt.gravatar.com/amgauna"> https://pt.gravatar.com/amgauna </a>
-  <p> </p>
+  <p> </p> <br>
+  <p> </p> <br>
+  <b> Banco de Dados </b> <br>
+* DBase III <br> * CA-Clipper5 <br>
+* Microsoft Access <br> * Microsoft FoxPRO <br>
+* Microsof SQL 2000 Server <br>  * Microsof SQL 2008 Server <br> 
+* Microsof SQL 2012 Express <br> * Microsof SQL 2014 Express <br>
+* Microsof SQL 2008 Server <br>  * Microsof SQL 2016 Server <br>  
+    <p> </p> 
 </div>
 
 <div class="col-md-3">
@@ -103,16 +111,6 @@ Instagram: @amgauna @anagaunatech
   <b>Graphic Design </b> <br>
 * Corel Draw <br> * Adobe Photoshop <br> 
 </div>  
-
-<div class="col-md-2"> 
- <b> Banco de Dados </b> <br>
-* DBase III <br> * CA-Clipper5 <br>
-* Microsoft Access <br> * Microsoft FoxPRO <br>
-* Microsof SQL 2000 Server <br>  * Microsof SQL 2008 Server <br> 
-* Microsof SQL 2012 Express <br> * Microsof SQL 2014 Express <br>
-* Microsof SQL 2008 Server <br>  * Microsof SQL 2016 Server <br>  
-    <p> </p>
-</div> 
  
             
 <div class="col-md-2"> 
