--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Instagram: @amgauna @anagaunatech <br>
 <div class="col-md-2"> 
   <p> </p> <br>
   <b> Banco de Dados </b> <br>
-* DBase III <br> * CA-Clipper5 <br>
+* DBase III Plus <br> * CA-Clipper5 <br>
 * Microsoft Access <br> * Microsoft FoxPRO <br>
 * Microsof SQL 2000 Server <br>  * Microsof SQL 2008 Server <br> 
 * Microsof SQL 2012 Express <br> * Microsof SQL 2014 Express <br>
