--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Instagram: @amgauna @anagaunatech <br>
 * MS Visio <br> * MS Project <br>
 <p> </p>
 <b>Graphic Design </b> <br>
-* Corel Draw <br> * Adobe Photoshop <br>  
+* Corel Draw <br> * Adobe Photoshop <br> * PaintShop Pro <br>
 <p> </p> <br>
 <b> Programação Web </b> <br>
 * HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS3 <br> * JavaScript <br> 
