--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Instagram: @amgauna @anagaunatech <br>
   Gravatar: <a href="https://pt.gravatar.com/amgauna"> https://pt.gravatar.com/amgauna </a>
   <p> </p> <br>
   * Administração & Controle <br> * Organização & Métodos <br> * Contabilidade & Finanças <br>
-  * Direito & Legislação <br> * Psicologia <br> * Matemática Financeira <br>
+  * Direito & Legislação <br> * Psicologia <br> * Matemática Financeira <br> * Estatística <br>
   * Direito Digital <br> * Privacidade Digital <br> * Big Data <br> * Data Analytics <br>  
     <p> </p>
 </div>
@@ -128,7 +128,7 @@ Instagram: @amgauna @anagaunatech <br>
 * HTML3 <br> * HTML4 <br> * HTML5 <br> * CSS3 <br> * JavaScript <br> 
 * Bootstrap 3.3.7 <br> * Java <br> * PHP5 <br> * PHP7 <br>  * Wordpress <br> * Blogger <br>
  <p> </p> 
-* ISO 27000 <br> * ISO 27001 <br> * ISO 27002 <br> * ISO 27003 <br> 
+  * <b> ABNT ISO 27000 </b> <br> * <b> ABNT ISO-27001 </b> <br> * <b> ABNT ISO-27002 </b> <br> * <b> ABNT ISO-27003 </b> <br> 
 * Axelos ITIL3 <br> * Isaca Cobit5 <br> * PMI <br> * CompTIA <br>
     <p> </p>
 </div>  
