--- a/index.html
+++ b/index.html
@@ -20,18 +20,15 @@
      <div class="container">
           <div class="row">
 
-<div class="col-md-7">
+<div class="col-md-7" align="left">
 <p> </p>
   <!--  <h1> Ana Mercedes Gauna </h1>   -->
   <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50">
-<p> </p>
+<p> </p> <br>
 </div>
             
-<div class="col-md-3">
-  <p> </p>
-  <p> </p>
-  <p>  </p>
-  
+<div class="col-md-3" align="left">
+ <p>  </p> <br>
 <img src="/amgauna.github.io/AnaGauna-2016.jpg" width="150" height="150">  
   <p> </p>
 CRA-RJ: 03-03161 <br>
