--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ Hangounts: amgauna@gmail.com <br>
 Skype: amgauna@hotmail.com
   <p> </p>
   <p> </p>
+* IT Consultant | CEO | CTO
 * Senior Business Systems Analyst <br>
 * Project Business Management <br>
 * Analista de Sistemas e Negócios <br>
@@ -51,6 +52,10 @@ Skype: amgauna@hotmail.com
 * Analista de Infraestrutura <br>
   Cliente-Servidor Windows <br>
 * Serviços Data Analytics <br>
+* SEO / Marketing Digital <br>
+* Criação de Sites e Blogs <br>
+* Edição de Imagem, Logotipo <br>
+Lettering / Banner / Flyer <br>
   <p>  </p>
 <img src="/amgauna.github.io/gauna2.jpg" width="200" height="60">  
   <p> </p>
