--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Instagram: @amgauna @anagaunatech <br>
 * Microsof SQL 2008 Server <br>  * Microsof SQL 2016 Server <br> 
 <p> </p>
 <b> Antivírus / SSL </b> <br>
-* Symantec Norton <br> * Kaspersky Security <br> * McAfee Security <br> * Intel Security <br> * ESET Security <br> 
+* Symantec Norton <br> * Kaspersky Security <br> * Intel McAfee Security <br> * ESET Security <br> 
 * Trend Micro Security <br> * AVG Security <br> * AVAST Security <br>
  <p> </p>  
 </div>  
