--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <div class="col-md-12" align="left">
 <p> </p>
   <!--  <h1> Ana Mercedes Gauna </h1>   -->
-  <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50">
+  <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50" align="left">
+  <img src="/amgauna.github.io/gauna2.jpg" width="200" height="60" align="center">  
+  <p> </p>
 <p> </p> <br> <p>
 </div>
             
@@ -57,8 +59,6 @@ Skype: amgauna@hotmail.com
 * Edição de Imagem, Logotipo <br>
 Lettering / Banner / Flyer <br>
   <p>  </p>
-<img src="/amgauna.github.io/gauna2.jpg" width="200" height="60">  
-  <p> </p>
  </div>
   
  <div class="col-md-4">
