--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p> </p>
   <!--  <h1> Ana Mercedes Gauna </h1>   -->
   <img src="/amgauna.github.io/gaunanome-gif.gif" width="500" height="50" align="left">
-  <img src="/amgauna.github.io/gauna2.jpg" width="200" height="60" align="center">  
+  <img src="/amgauna.github.io/gauna2.jpg" width="200" height="60" align="right">  
   <p> </p>
 <p> </p> <br> <p>
 </div>
