--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Hangounts: amgauna@gmail.com <br>
 Skype: amgauna@hotmail.com
   <p> </p>
   <p> </p>
-* IT Consultant | CEO | CTO
+* IT Consultant | CEO | CTO <br>
 * Senior Business Systems Analyst <br>
 * Project Business Management <br>
 * Analista de Sistemas e Negócios <br>
@@ -52,6 +52,12 @@ Skype: amgauna@hotmail.com
 * Analista de Infraestrutura <br>
   Cliente-Servidor Windows <br>
 * Serviços Data Analytics <br>
+* Suporte Técnico <br>
+* Manutenção Preventiva <br>
+* Backup/Restore SQL Server <br>
+* Instalação de equipamentos <br>
+* Instalação de aplicativos <br>
+* Instalação de rede wireless <br>
 * SEO / Marketing Digital <br>
 * Criação de Sites e Blogs <br>
 * Edição de Imagem, Logotipo <br>
