--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@ Instagram: @amgauna @anagaunatech <br>
   <p>
   Gravatar: <a href="https://pt.gravatar.com/amgauna"> https://pt.gravatar.com/amgauna </a>
   <p> </p> <br>
+  <b> Management <b> <br>
   * Administração & Controle <br> * Organização & Métodos <br> * Contabilidade & Finanças <br>
   * Direito & Legislação <br> * Psicologia <br> * Matemática Financeira <br> * Estatística <br>
-  * Direito Digital <br> * Privacidade Digital <br> * Big Data <br> * Data Analytics <br>  
+  * Adminsitração de Projetos <br> * Direito Digital <br> * Privacidade Digital <br> 
+  * Big Data <br> * Data Analytics <br> * Inteligência Artificial <br> * Data Science <br>
     <p> </p>
 </div>
 
